fix: footer not on bottom of page fix: some paddings and margings for new footer logic

--- a/src/components/CheckoutPage/CheckoutPage.scss
+++ b/src/components/CheckoutPage/CheckoutPage.scss
@@ -1,6 +1,6 @@
 .checkout-page {
   &__root {
-    min-height: 67vh;
+    @include center-main;
     @media (min-width: $breakpoint-tablet) {
       display: flex;
       flex-direction: row-reverse;
