--- a/src/components/CartPage/CartPage.scss
+++ b/src/components/CartPage/CartPage.scss
@@ -1,10 +1,14 @@
 .cart-page {
   &__root {
-    margin: 0 auto;
-    min-height: 69vh;
+    @include center-main;
+  }
+
+  &__wrapper{
     padding: 0.6rem;
     max-width: 62.5rem;
+    margin: auto;
   }
+
   &__title {
     font-size: 1.3rem;
     &--h2 {
@@ -38,7 +42,7 @@
 
   &__message {
     margin-bottom: 1rem;
-    padding-left: 0.375rem;
+    padding: 0 1rem;
     @media (min-width: $breakpoint-tablet) {
       margin-bottom: 0;
       margin-left: 0.5rem;
