--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,7 +1,9 @@
 .footer {
-
-  &__wrap{
-    flex-shrink: 0
+  &__wrap {
+    flex-shrink: 0;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
   }
 
   &__root {
@@ -54,7 +56,7 @@
       margin: 0rem 0.255rem;
       filter: invert(86%) sepia(11%) saturate(146%) hue-rotate(184deg)
         brightness(96%) contrast(97%);
-        transition: filter 0.35s;
+      transition: filter 0.35s;
       &:hover {
         filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg)
           brightness(102%) contrast(102%);
