--- a/src/styles/mixins/utils.scss
+++ b/src/styles/mixins/utils.scss
@@ -14,3 +14,11 @@
     flex-wrap: wrap;
 
 }
+
+@mixin center-main {
+  margin: auto 0;
+  padding-bottom: 29.2rem;
+  @media (min-width: $breakpoint-tablet) {
+    padding-bottom: 16.3rem;
+  }
+}
