docs: link change fix: prevent scroll when hamburger menu is open

--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -6,6 +6,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: $background-white;
+  &.no-scroll {
+    overflow: hidden;
+  }
 }
 
 code {
@@ -41,6 +44,6 @@ input::-webkit-inner-spin-button {
 }
 
 /* Firefox */
-input[type=number] {
+input[type="number"] {
   -moz-appearance: textfield;
 }
